Bætti við 'og Sigríðar' allsstaðar

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="grid.css"> -->
-    <title>Gjafalisti Elfars</title>
+    <title>Gjafalisti Elfars og Sigríðar</title>
   </head>
   <body>
     <div class="wrapper">
-    <h1>Jóla- og afmælisgjafalisti Elfars</h1>
+    <h1>Jóla- og afmælisgjafalisti Elfars og Sigríðar</h1>
     <div class="forvari">
       <p>
         Laufléttur formáli: <br><br>
