Tók Knight Bus úr gamesbooks. Núna er það bara á listanum hennar Sísó

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href ="https://github.com/elfaroliver" target="_blank"><i class="fa-brands fa-github"></i></a>
       </div>
       <!-- <div class="footerBottom">
-        <p>Copyright &copy;</p> fdgbhjm
+        <p>Copyright &copy;</p>
       </div> -->
     </footer>
   </body>
