--- a/pages/sisi.html
+++ b/pages/sisi.html
@@ -42,6 +42,14 @@
               <li><a href="https://kubbabudin.is/harry-potter-avintyri-i-naturvagninum.html" target="_blank">Harry Potter<br> Knight Bus Lego</a></li>
               <li><a href="https://silkisvefn.is/products/augnhlifar" target="_blank">Svefngríma</a></li>
               <li><a href="https://elko.is/vorur/shark-smoothstyle-hitabursti-362012/HT202EU" target="_blank">Hitahárbursti</a></li>
+              <li><a href="https://www.boozt.com/is/is/ritzenhoff/sommersonett-vinglas-2-p-birds_32793849/229293675" target="_blank">Fancy vínglös</a></li>
+              <li><a href="https://www.boozt.com/is/is/search/result?search_key=disney%20frozen%20anna%20pandora" target="_blank">FrozenÖnnuhringur</a></li>
+              <li><a href="https://www.boozt.com/is/is/pandora/disney-rapunzel-14k-gold-plated-tiara-ring-with-phlox-pink-crystal-and-clear-cubic-zirconia_32969804/231236919" target="_blank">Garðabrúðuhringur</a></li>
+              <li><a href="https://www.boozt.com/is/is/pandora/disney-cinderella-14k-gold-plated-ring-with-clear-and-fancy-light-blue-cubic-zirconia_32969508/231237450" target="_blank">Öskubuskuhringur</a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
           </div>
