--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -10,7 +10,7 @@
     <title>Leikir og bækur</title>
   </head>
   <body>
-    <div class="wrapper">
+  <div class="wrapper">
     <div class="backtoindex">
       <a href="../index.html">Aftur á forsíðu</a>
     </div>
@@ -54,14 +54,17 @@
               <li><a href="https://www.penninn.is/is/book/machine-age" target="_blank">The Machine Age</a></li>
               <li><a href="https://www.penninn.is/is/book/medusa-new-ancient-greek-tales" target="_blank">Medusa: New & Ancient Greek Tales</a></li>
               <li><a href="https://www.penninn.is/is/book/solarpunk-short-stories-many-futures" target="_blank">Solarpunk: Short Stories from Many Futures</a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+            </div>
+            <div class="card">
+              <p>Fleiri bækur</p>
               <li><a href="https://www.penninn.is/is/book/joy-actually-giving-fck" target="_blank">The Joy of Actually Giving a Fuck</a></li>
               <li><a href="https://www.penninn.is/is/book/haiku-pocket-edition-flexibound" target="_blank">Haiku: Pocket Edition</a></li>
               <li><a href="https://www.penninn.is/is/book/happy-poem-start-every-day" target="_blank">Happy Poem to Start Every Day</a></li>
               <li><a href="https://www.penninn.is/is/book/medusas-sisters" target="_blank">Medusa's Sisters</a></li>
               <li><a href="https://www.penninn.is/is/book/shadow-perseus" target="_blank">Shadow of Perseus</a></li>
-              <li><a href="" target="_blank"></a></li>
-              <li><a href="" target="_blank"></a></li>
-              <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
               <p>Borðspil</p>
