Bætti við kjól fyrir Sísí

--- a/pages/sisi.html
+++ b/pages/sisi.html
@@ -42,7 +42,7 @@
               <li><a href="https://silkisvefn.is/products/augnhlifar" target="_blank">Svefngríma</a></li>
               <li><a href="https://elko.is/vorur/shark-smoothstyle-hitabursti-362012/HT202EU" target="_blank">Hitahárbursti</a></li>
               <li><a href="https://www.boozt.com/is/is/ritzenhoff/sommersonett-vinglas-2-p-birds_32793849/229293675" target="_blank">Fancy vínglös</a></li>
-              <li><a href="" target="_blank"></a></li>
+              <li><a href="https://heimaergott.is/collections/kjolar/products/anetta-kjoll-lakkris?variant=47644769059122" target="_blank">Kjóll</a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
