Fann typo í stickers

--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -71,7 +71,7 @@
             <li><a href="https://www.redbubble.com/i/sticker/Ttpd-sticker-ts-taylor-by-insolation-art/160500147.EJUG5" target="_blank">Taylor Swift texti</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5" target="_blank">Bort license plate</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Touch-grass-by-Crocyart/161245592.EJUG5" target="_blank">Touch Grass</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Donut-by-Shellbee1234/18725314.EJUG5" target="_blank">Simpsons kleinhringur</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Donut-by-Shellbee1234/18725314.EJUG5" target="_blank">Simpsons kleinuhringur</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Cool-S-S-Thing-by-eggsforbrekkie/34805673.EJUG5" target="_blank">Cool S</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/1-low-battery-by-sophiacodinachh/42456623.EJUG5" target="_blank">1% battery</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Hattori-Hanzo-Sword-Company-by-Primotees/36525192.EJUG5" target="_blank">Hattori Hanzo Sword Company</a></li>
