Fékk nokkra límmiða frá Sigríði

--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -54,8 +54,9 @@
             <li><a href="https://www.redbubble.com/i/sticker/Feel-like-a-Man-by-jonathandavito/41062912.EJUG5" target="_blank">Armstrong að grenja</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Brook-45-degrees-One-Piece-by-coguestore/151327970.O9UDB" target="_blank">Brook í 45°</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/One-piece-Logo-That-Luffy-Draw-by-EstaDouglas/111580141.EJUG5" target="_blank">Straw Hat Jolly Roger</a></li>
+            <!-- Fékk early jólagjöf frá Sigríði 2025
             <li><a href="https://www.redbubble.com/i/sticker/Mademark-x-Teenage-Mutant-Ninja-Turtles-Donatello-Raphael-Michelangelo-and-Leonardo-by-prodesigns21/136250663.O9UDB" target="_blank">TMNT</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Death-Honking-by-Camperista09/124118259.EJUG5" target="_blank">Death Honking</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Death-Honking-by-Camperista09/124118259.EJUG5" target="_blank">Death Honking</a></li> -->
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
@@ -66,7 +67,8 @@
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li> -->
             <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li> -->
-            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5" target="_blank">Ribs by Lorde</a></li>
+            <!-- Fékk early jólagjöf frá Sigríði 2025
+            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5" target="_blank">Ribs by Lorde</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/Brooklyn-Nine-Nine-B99-Cool-Cool-No-Doubt-by-clairesnation/35088164.EJUG5" target="_blank">Cool, no doubt</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Ttpd-sticker-ts-taylor-by-insolation-art/160500147.EJUG5" target="_blank">Taylor Swift texti</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5" target="_blank">Bort license plate</a></li>
@@ -93,7 +95,8 @@
             <li><a href="https://www.redbubble.com/i/sticker/for-legal-reasons-this-is-a-joke-by-cederucki/53211073.EJUG5" target="_blank">A joke</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Power-of-God-and-Anime-by-Emmycap/29906257.EJUG5" target="_blank">Power of God and Anime</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/ghost-stories-by-werKENOUGH/151931767.EJUG5" target="_blank">All humans are idiots</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/hokus-pokus-you-ve-now-lost-your-focus-by-FunnyGrief/50302918.EJUG5" target="_blank">Hocus Pocus Focus</a></li>
+            <!-- Fékk early jólagjöf frá Sigríði 2025
+            <li><a href="https://www.redbubble.com/i/sticker/hokus-pokus-you-ve-now-lost-your-focus-by-FunnyGrief/50302918.EJUG5" target="_blank">Hocus Pocus Focus</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/To-be-continued-by-Flog7/56257146.EJUG5" target="_blank">To be continued</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/toe-beans-tin-by-lucianavee/150403932.EJUG5" target="_blank">Toe beans</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/I-Can-t-Talk-Right-Now-I-m-Doing-Hot-Girl-Shit-by-acatalepsys/67309154.EJUG5" target="_blank">Hot girl shit</a></li>
@@ -108,7 +111,8 @@
             <li><a href="https://www.redbubble.com/i/sticker/Great-Wave-Aesthetic-by-Zayter/27565423.EJUG5" target="_blank">Retro triangle great wave</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Pink-mini-star-pack-by-colleenm2/59929626.O9UDB" target="_blank">Stjörnur</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Yellow-mini-star-pack-by-colleenm2/55391309.EJUG5" target="_blank">Fleiri stjörnur</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Great-Wave-off-Kanagawa-circle-by-monsterplanet/17849318.EJUG5" target="_blank">Upprunalega great wave</a></li>
+            <!-- Fékk early jólagjöf frá Sigríði 2025
+            <li><a href="https://www.redbubble.com/i/sticker/Great-Wave-off-Kanagawa-circle-by-monsterplanet/17849318.EJUG5" target="_blank">Upprunalega great wave</a></li> -->
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
