--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -46,17 +46,59 @@
             <p>Nerd culture</p>
             <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li> -->
-            <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5" target="_blank">Astra</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5" target="_blank">FBC</a></li>
-            <li><a href="https://www.fangamer.com/collections/stickers/products/stray-game-stickers" target="_blank">Stray</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/PS2-Logo-Light-by-drkpxl/31311920.O9UDB" target="_blank">Playstation 2 merkið</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Ara-Cyberpunk-Nightcity-text-by-haz5077/141531088.EJUG5" target="_blank">Arasaka logo</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Feel-like-a-Man-by-jonathandavito/41062912.EJUG5" target="_blank">Armstrong að grenja</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Brook-45-degrees-One-Piece-by-coguestore/151327970.O9UDB" target="_blank">Brook í 45°</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/One-piece-Logo-That-Luffy-Draw-by-EstaDouglas/111580141.EJUG5" target="_blank">Straw Hat Jolly Roger</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/ONE-PIECE-STICKERS-MONKEY-D-LUFFY-STICKERS-ACE-STICKERS-SANJI-STICKERS-LUFFY-STICKERS-by-allwhatiwant4/123383043.EJUG5" target="_blank">Straw Hat Jolly Roger</a></li>
             <!-- Fékk early jólagjöf frá Sigríði 2025
             <li><a href="https://www.redbubble.com/i/sticker/Mademark-x-Teenage-Mutant-Ninja-Turtles-Donatello-Raphael-Michelangelo-and-Leonardo-by-prodesigns21/136250663.O9UDB" target="_blank">TMNT</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Death-Honking-by-Camperista09/124118259.EJUG5" target="_blank">Death Honking</a></li> -->
+            
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+          </div>
+          <div class="card">
+            <p>Gaming</p>
+            <li><a href="https://www.redbubble.com/i/sticker/Crystal-Dragon-by-WitheredUK/65211477.O9UDB" target="_blank">Spyro crystal dragon</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/It-Takes-Two-Ball-by-rubinho146/75770928.EJUG5" target="_blank">It Takes Two</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5" target="_blank">Astra</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Control-FBC-Logo-by-BrotherOfPerl/78131251.O9UDB" target="_blank">FBC</a></li>
+            <li><a href="https://www.fangamer.com/collections/stickers/products/stray-game-stickers" target="_blank">Stray</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Playstation-2-classic-by-voidmatrix/176611408.O9UDB" target="_blank">Playstation 2 merkið</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Ara-Cyberpunk-Nightcity-text-by-haz5077/141531088.EJUG5" target="_blank">Arasaka logo</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Silent-Hill-by-Sketches15/72114363.EJUG5" target="_blank">Silent Hill</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+          </div>
+          <div class ="card">
+            <p>Meira gaming</p>
+            <li><a href="https://www.redbubble.com/i/sticker/Jill-Valentine-The-Eras-Tour-by-Cvera7/148228097.EJUG5" target="_blank">Jill Valentine, Eras Tour</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Burger-Town-Variant-by-Fuloprnabasne/159869578.EJUG5" target="_blank">Burger Town</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Ray-Gun-by-Andy1644/59192562.EJUG5" target="_blank">Ray Gun</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Tiny-Tina-Bunny-by-Bella-Trinity/129059132.EJUG5" target="_blank">Tiny Tina Bunny</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/animal-magic-spirits-by-EVELYN-SIS/93244983.EJUG5" target="_blank">Kena</a></li>
+            <li><a href="https://www.redbubble.com/i/holographic-sticker/Whats-up-danger-by-Rostron/61081993.A3LW6" target="_blank">Spider-Man spider</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Dead-Space-Cut-off-their-limbs-by-mattbroughton/138496256.O9UDB" target="_blank">Dead Space</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Alan-Wake-Oh-Deer-Diner-Thermos-by-Nuuskavatti/153925313.EJUG5" target="_blank">Oh Deer Diner</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
@@ -74,7 +116,6 @@
             <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5" target="_blank">Bort license plate</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Touch-grass-by-Crocyart/161245592.EJUG5" target="_blank">Touch Grass</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Donut-by-Shellbee1234/18725314.EJUG5" target="_blank">Simpsons kleinuhringur</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Cool-S-S-Thing-by-eggsforbrekkie/34805673.EJUG5" target="_blank">Cool S</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/1-low-battery-by-sophiacodinachh/42456623.EJUG5" target="_blank">1% battery</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Hattori-Hanzo-Sword-Company-by-Primotees/36525192.EJUG5" target="_blank">Hattori Hanzo Sword Company</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Cool-Abed-Films-from-Community-by-juliarturk/79707723.EJUG5" target="_blank">Cool Abed Films</a></li>
