--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -41,7 +41,7 @@
               <li><a href="https://www.amazon.com/Tony-Hawks-American-Wasteland-PlayStation-Renewed/dp/B07Z187LW9/ref=sr_1_6?crid=1IGY9XSA2NFON&dib=eyJ2IjoiMSJ9.lp-lxBwaIkC5oenR9ImO6QMutNAZNL9TZioohhkSYOrtfkfKCn6aME1owvfFj-j3Fwngqjy7ZbWS1OwaL4Gt1SxO7Mi7eeUz2AQYiLhXabFCfGhz4N1Rg-5pCMZYiOMyQs2INBUfQFsBkhHFZIPQ7Q.ts-93PFnQlavCU-lp_VBBUo8b1rSeJMq4gg3jh9aT14&dib_tag=se&keywords=tony+hawks+american+wasteland+ps2&qid=1743671517&sprefix=tony+hawks+amer%2Caps%2C261&sr=8-6" 
                 target="_blank">Tony Hawk's American Wasteland á PS2</a></li>
               <li><a href="https://elko.is/vorur/samsung-990-pro-m2-ssd-med-kaeliplotu-337309/MZV9P1T0GW" target="_blank">PS5 geymslupláss</a></li>
-              <li><a href="" target="_blank"></a></li>
+              <li><a href="https://www.amazon.com/256MB-Memory-Card-Playstation-Speed/dp/B07PMFPQBC/ref=pd_bxgy_d_sccl_1/141-9863245-4650743?pd_rd_w=m9hMd&content-id=amzn1.sym.dcf559c6-d374-405e-a13e-133e852d81e1&pf_rd_p=dcf559c6-d374-405e-a13e-133e852d81e1&pf_rd_r=GEHJPTX33B6Z33VB7WWR&pd_rd_wg=Se4tR&pd_rd_r=07c56062-3cf9-438c-91f2-85604da56d0b&pd_rd_i=B07PMFPQBC&psc=1" target="_blank">256MB kort fyrir PS2</a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
