Bætti hringastærð og fjarlægði einn hring sem Sísí fékk

--- a/pages/sisi.html
+++ b/pages/sisi.html
@@ -50,7 +50,9 @@
             </div>
             <div class="card">
               <p>Skartgripir</p>
-              <li><a href="https://www.boozt.com/is/is/search/result?search_key=disney%20frozen%20anna%20pandora" target="_blank">FrozenÖnnuhringur</a></li>
+              <div class="hringir"><p>Hringir eru í stærð 58</p></div>
+              <!-- Sísí fékk í jólagjöf 2025 -->
+              <!-- <li><a href="https://www.boozt.com/is/is/search/result?search_key=disney%20frozen%20anna%20pandora" target="_blank">FrozenÖnnuhringur</a></li> -->
               <li><a href="https://www.boozt.com/is/is/pandora/disney-rapunzel-14k-gold-plated-tiara-ring-with-phlox-pink-crystal-and-clear-cubic-zirconia_32969804/231236919" target="_blank">Garðabrúðuhringur</a></li>
               <li><a href="https://www.boozt.com/is/is/pandora/disney-cinderella-14k-gold-plated-ring-with-clear-and-fancy-light-blue-cubic-zirconia_32969508/231237450" target="_blank">Öskubuskuhringur</a></li>
               <li><a href="" target="_blank"></a></li>
