Breytti heitum á stökum listum til að þeir myndu ekki ýta listum neðar. Nenni ekki að læra meira strax

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -59,7 +59,7 @@
               <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
-              <p>Fleiri bækur</p>
+              <p>Bækur II</p>
               <li><a href="https://www.penninn.is/is/book/joy-actually-giving-fck" target="_blank">The Joy of Actually Giving a Fuck</a></li>
               <li><a href="https://www.penninn.is/is/book/haiku-pocket-edition-flexibound" target="_blank">Haiku: Pocket Edition</a></li>
               <li><a href="https://www.penninn.is/is/book/happy-poem-start-every-day" target="_blank">Happy Poem to Start Every Day</a></li>
