--- a/pages/practical.html
+++ b/pages/practical.html
@@ -34,40 +34,20 @@
             <div class="cards">
               <div class="card">
                 <p>IKEA/Rúmfó</p>
-                <!-- Fengum frá Láru og Kamil og stelpunum jólin 24
-                <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li> -->
                 <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
                 <li><a href="https://ikea.is/is/products/bord/skrifbord/skribord-og-bord-fyrir-skrifstofuna/trotten-haedarstillanlegt-skrifbord-spr-29434130" target="_blank">Skrifborð</a></li>
                 <!-- Keyptum bara sjálf
                 <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li> -->
               </div>
               <div class="card">
-                <p>Nestis- og matarbox</p>
-                <!-- Keyptum bara sjálf
-                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
-                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li> -->
+                <p>Matarbox</p>
                 <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
                 <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Minnalok</a></li>
-                <!-- Keyptum bara sjálf
-                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
-                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li> -->
               </div>
               <div class="card">
                 <p>Fyrir Elfar</p>
-                <!-- Keypti sjálfur í byrjun september 2025
-                <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li> -->
-                <!-- Fékk frá Kertó jólin 24
-                <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
                 <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
-                <!-- Keypti sjálfur einhvern daginn. Gleymdi að taka af listanum
-                <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li> -->
               </div>
-              <!-- <div class="card">
-                <p>Skipulag</p>
-                Fékk handgrip í afmælisgjöf 2024 -->
-                <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
-                <!-- <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
-              </div> -->
               <div class="card">
                 <p>Gjafakort</p>
                 <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
@@ -103,3 +83,26 @@
     </footer>
   </body>
 </html>
+
+
+
+<!-- Keypti sjálfur einhvern daginn. Gleymdi að taka af listanum
+<li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li> -->
+<!-- Keypti sjálfur í byrjun september 2025
+<li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li> -->
+<!-- Fékk frá Kertó jólin 24
+<li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
+<!-- Fengum frá Láru og Kamil og stelpunum jólin 24
+<li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li> -->
+<!-- <div class="card">
+  <p>Skipulag</p>
+  Fékk handgrip í afmælisgjöf 2024 -->
+  <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
+  <!-- <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
+</div> -->
+<!-- Keyptum bara sjálf
+<li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
+<li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li> -->
+<!-- Keyptum bara sjálf
+<li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
+<li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li> -->
