--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -43,7 +43,7 @@
            og fartölvu</h5>
         <div class="cards">
           <div class="card">
-            <p>Nerd culture</p>
+            <p>Anime</p>
             <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/Feel-like-a-Man-by-jonathandavito/41062912.EJUG5" target="_blank">Armstrong að grenja</a></li>
@@ -81,7 +81,7 @@
             <li><a href="" target="_blank"></a></li>
           </div>
           <div class ="card">
-            <p>Meira gaming</p>
+            <p>Gaming II</p>
             <li><a href="https://www.redbubble.com/i/sticker/Jill-Valentine-The-Eras-Tour-by-Cvera7/148228097.EJUG5" target="_blank">Jill Valentine, Eras Tour</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Burger-Town-Variant-by-Fuloprnabasne/159869578.EJUG5" target="_blank">Burger Town</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Ray-Gun-by-Andy1644/59192562.EJUG5" target="_blank">Ray Gun</a></li>
